--- a/Занятие4/Домашние_задания/task1_2/task-info.yaml
+++ b/Занятие4/Домашние_задания/task1_2/task-info.yaml
@@ -32,5 +32,9 @@ files:
 - name: __init__.py
   visible: false
   learner_created: false
-status: Unchecked
+status: Failed
+feedback:
+  message: Incorrect
+  time: Sat, 14 May 2022 13:36:27 UTC
+  actual: <no output>
 record: -1
